<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/change_mode_popup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="132dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="30dp"
        android:background="#62def8"
        android:text="Choose your mode:"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/brief_btn"
        android:layout_width="127dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#83A300"
        android:onClick="onBriefClicked"
        android:text="Brief"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/detail_btn"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="400dp"
        android:layout_marginBottom="652dp"
        android:backgroundTint="#83A300"
        android:onClick="onDetailClicked"
        android:text="Detail"
        android:textAllCaps="false"
        android:textSize="16sp" />

</RelativeLayout>
