<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F1E9">


    <TextView
        android:id="@+id/next_exhibit"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#83A300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <TextView
        android:id="@+id/next_animal"
        android:layout_width="224dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="6dp"
        android:text=" Next animal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/next_exhibit"
        app:layout_constraintEnd_toEndOf="@+id/next_exhibit"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/next_exhibit"
        app:layout_constraintTop_toTopOf="@+id/next_exhibit" />


    <TextView
        android:id="@+id/next_message"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:background="#C4C4C4"
        android:text="Next coming up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/next_exhibit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/current_exhibit"
        android:layout_width="412dp"
        android:layout_height="67dp"
        android:background="#83A300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">


        <TextView
            android:id="@+id/current_animal"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Animal Name"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_distance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:text="Distance"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/skip_btn"
            android:layout_width="52dp"
            android:layout_height="64dp"
            android:clickable="true"
            android:onClick="onSkipClicked"
            android:src="@drawable/ic_trash_can"
            tools:layout_editor_absoluteX="380dp"
            tools:layout_editor_absoluteY="87dp" />

    </LinearLayout>

    <Button
        android:id="@+id/home_btn"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:backgroundTint="#83A300"
        android:onClick="onHomeClicked"
        android:text="HOME"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="#B2F194"
        android:onClick="onNextClicked"
        android:text="NEXT"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="#B2F194"
        android:onClick="onBackClicked"
        android:text="BACK"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:backgroundTint="#F56C6C"
        android:onClick="onStopClicked"
        android:text="STOP NAVIGATION"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/route_instruction"
        android:layout_width="347dp"
        android:layout_height="295dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:width="350dp"
        android:height="200dp"
        android:background="#9F9EB150"
        android:scrollbars="vertical"
        android:text="The shortest path from 'elephant_odyssey' to 'entrance_exit_gate' is:   \n1. Walk 200 meters along Africa Rocks Street from 'Lions' to 'Elephant Odyssey'.   \n2. Walk 200 meters along Sharp Teeth Shortcut from 'Alligators' to 'Lions'.   \n3. Walk 100 meters along Reptile Road from 'Entrance Plaza' to 'Alligators'.  \n4. Walk 10 meters along Entrance Way from 'Entrance and Exit Gate' to 'Entrance Plaza'."
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_exhibit" />

    <Button
        android:id="@+id/Setting_btn"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:backgroundTint="#83A300"
        android:onClick="onSettingClicked"
        android:text="SETTINGS"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>