...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#83A300"
        android:onClick="onPlanClicked"
        android:text="PLAN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />
...
        android:backgroundTint="#83A300"
        android:inputType="text"
        android:text="There are 0 animals selected: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exhibit_items" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exhibit_items"
        android:layout_width="344dp"
        android:layout_height="314dp"
        android:layout_marginStart="35dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.154" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="74dp">

    </androidx.appcompat.widget.SearchView>
...
