<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenExhibitListActivity"
    android:background="#F8F1E9"
    >

    <Button
        android:id="@+id/home_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#83A300"
        android:onClick="onHomeClicked"
        android:text="HOME"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#F56C6C"
        android:onClick="onClearClicked"
        android:text="CLEAR"
        android:textAllCaps="false"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/direction_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:backgroundTint="#83A300"
        android:onClick="onGetDirectionClicked"
        android:text="Get Direction!"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route"
        android:layout_width="396dp"
        android:layout_height="509dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />
</androidx.constraintlayout.widget.ConstraintLayout>